css/styles.css
@-webkit-keyframes slidein {
  from {
    opacity: 0;
    transform: translateY(-50%);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slidein {
  from {
    opacity: 0;
    transform: translateY(-50%);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@-webkit-keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-webkit-keyframes fadeout {
  to {
    opacity: 0;
  }
}

@keyframes fadeout {
  to {
    opacity: 0;
  }
}

@-webkit-keyframes minimize {
  to {
    opacity: 0;
    transform: scale(0);
  }
}

@keyframes minimize {
  to {
    opacity: 0;
    transform: scale(0);
  }
}

:root {
  --color-primary: cornsilk;
  --color-secondary: #724b3f;
	--text-input-bg: #ebe2d5;

  --header-height: 70px;
}

/* DEFAULT pressStart */
:focus {
  outline: none;
}

:focus-visible {
  border-radius: inherit;
  outline: 2px dashed var(--color-secondary);
}

h3 {
  font-family: 'Cyclone', monospace;
  font-size: clamp(1.875rem, 4vw, 2.125rem);
}

a:hover,
button:hover {
  opacity: 0.85;
}

.user-name {
  font-weight: bold;
}

.user-status {
  background: radial-gradient(red, var(--color-primary));
  border-radius: 50%;
  border: 2px solid var(--color-secondary);
  display: inline-block;
  flex-shrink: 0;
  height: 15px;
  width: 15px;
}

.user-online {
  background: radial-gradient(chartreuse, var(--color-primary));
}

.book-title {
  color: var(--color-secondary);
  font-weight: bold;
  font-style: italic;
}

.cyclone-c-outline {
  position: absolute;
  bottom: 0;
  height: 700px;
  width: 700px;
  fill: #724b3f;
  opacity: 0.1;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  padding: 0;
  z-index: -1;
}

/* DEFAULT gameOver */

@keyframes float {
  from {
    transform: translate(-50%, -50%) translateY(-222px)  rotate(0deg);
  }
  to {
    transform: translate(-50%, -50%) translateY(222px) rotate(360deg);
  }
}

#cyclone-wrapper {
  position: absolute;
  inset: 0;
  overflow: hidden;
  z-index: -1;
}

#cyclone-wrapper .cyclone-c-outline {
  animation: float 33s linear infinite alternate;
  opacity: 0.1;
  transition: opacity 1.21s ease-in;
}

body:hover #cyclone-wrapper .cyclone-c-outline {
  opacity: 0;
}

body {
	background-color: var(--color-primary);
  color: var(--color-secondary);
	display: flex;
	flex-direction: column;
	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-size: 0.8313rem;
	position: relative;
}

header {
  background-color: var(--color-secondary);
  box-shadow: 0 10px 20px -8px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  left: 0;
  margin-bottom: 25px;
  min-height: var(--header-height);
  padding-inline: 5vw;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1;
}

header :focus {
  outline: none;  
}

header :focus-visible {
  outline: 2px dashed var(--color-primary);
}

header ~ #page-content-wrapper {
  padding-top: var(--header-height);
}

header #header-left {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

header #header-left #header-logo {
  font-family: 'Cyclone', monospace;
	font-size: 2.5rem;
	padding-bottom: 7px;
}

header #header-left #header-logo a {
  color: var(--color-primary);
  text-decoration: none;
}

header #header-left #menu-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  background: none;
  border: none;
  cursor: pointer;
  height: 55px;
  padding: 5px;
  width: 55px;
  transition: 0.5s all ease-in;
  z-index: 2;
}

header #header-left #menu-btn-san {
  background: var(--color-primary);
  border-radius: 8px;
  display: flex;
  height: 3px;
  justify-content: center;
  transition: all .3s ease-in-out;
  width: 20px;
}

header #header-left #menu-btn-san::before {
  background: var(--color-primary);
  border-radius: 3px;
  content: '';
  height: 3px;
  position: absolute;
  transform: translateY(-8px);
  width: 28px;
}

header #header-left #menu-btn-san::after {
  background: var(--color-primary);
  border-radius: 3px;
  content: '';
  height: 3px;
  position: absolute;
  transform: translateY(8px);
  width: 33px;
}

/* MENU-BTN ANIMATION pressStart */
header #header-left #menu-btn.open #menu-btn-san {
  background: transparent;
  box-shadow: none;
  transform: rotate(-360deg);
  transition: all 1.8s ease-out;
}

header #header-left #menu-btn.open #menu-btn-san::before {
  background: var(--color-primary);
  opacity: 0.8;
  transform: rotate(405deg);
  transition: all 1.8s ease-out;
  width: 33px;
}

header #header-left #menu-btn.open #menu-btn-san::after {
  background: var(--color-primary);
  opacity: 0.8;
  transform: rotate(-405deg);
  transition: all 1.8s ease-out;
  width: 33px;
}

header #header-left:has(#menu-btn.open) ~ #header-right {
  display: flex;
}

/* MENU-BTN ANIMATION gameOver */

header #header-right {
  display: none;
  flex-direction: column;
  gap: 25px;
  margin-bottom: 25px;
}

header #header-right #nav-ul {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  list-style: none;
}

header #header-right #nav-ul li {
	display: inline-block;
  position: relative;
}

header #header-right #nav-ul li a {
	color: var(--color-primary);
  position: relative;
	text-decoration: none;
}

header #header-right #nav-ul li a::before {
  background: var(--color-primary);
  bottom: -2px;
  content: '';
  height: 1px;
  left: 0;
  position: absolute;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  transform-origin: left;
  -webkit-transition: transform 380ms ease-in-out;
  transition: transform 380ms ease-in-out;
  width: 100%;
}

header #header-right #nav-ul li a:hover::before {
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
} 

header #header-right #header-btns {
  display: flex;
  gap: 15px;
}
/* ... */

